--- a/TewCloud/Scripts/AngularJS/app/templates/addWord.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/addWord.html
@@ -1,5 +1,5 @@
 <div >
-    <h3 class="center-block">Add word</h3>
+    <div class="center-block page-title">Add word</div>
 
     <!-- desctop -->
     <div class="visible-desktop">
