--- a/TewCloud/Scripts/AngularJS/app/templates/myWords.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/myWords.html
@@ -1,4 +1,4 @@
-﻿<h3 class="center-block">My words</h3>
+﻿<div class="center-block page-title">My words</div>
 
 <div>    
     <div [hidden]="loaded">LOADING...</div>
