--- a/TewCloud/Scripts/AngularJS/app/templates/home.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/home.html
@@ -5,13 +5,13 @@
 <!-- mobile -->
 <div class="visible-phone visible-tablet center-block">
     <div class="learning-main-background">
-        <a class="mobile-text" routerLink="/add-word">Add word</a>
+        <a class="mobile-home-link" routerLink="/add-word">Add word</a>
         <br/>
 
-        <a class="mobile-text" routerLink="/my-words">My words</a>
+        <a class="mobile-home-link" routerLink="/my-words">My words</a>
         <br/>
 
-        <a class="mobile-text" routerLink="/picker-test">Picker test</a>
+        <a class="mobile-home-link" routerLink="/picker-test">Picker test</a>
         <br/>
     </div>
 </div>
