--- a/TewCloud/Scripts/AngularJS/app/templates/app.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/app.html
@@ -4,7 +4,7 @@
         <div class="menu-header learning-main-background">
             <div class="row menu-header-links">
                 <div class="col-md-8">
-                    <a href="void:alert('feature is cooming soon')">New feature</a>
+                    <div>{{applicationMessage}}</div>
                 </div>
                 <div class="col-md-4 menu-header-user-name">
                     <span>
