--- a/TewCloud/Scripts/AngularJS/app/templates/addWord.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/addWord.html
@@ -3,13 +3,53 @@
 
     <!-- desctop -->
     <div class="visible-desktop">
+        <form [formGroup]="complexForm">
+            <div class="row add-word-area">
+                <div class="col-md-6">
+                    <span class="label">English word:</span>
+                    <br />
+                    <input class="form-control add-word-english-word" style="float: left" type="text" (keyup.enter)="translate()" [(ngModel)]="englishWord" />
+                    <button class="btn glyphicon glyphicon-search" (click)="translate()"></button>
+                    <br />
+                    <br />
+                    <span class="label">Your translate:</span>
+                    <br />
+                    <input class="form-control" type="text" [(ngModel)]="chosenTranslate" (keyup.enter)="save()" />
+                    <br />
+                    <span class="label">Example of use:</span>
+                    <br />
+                    <textarea class="form-control" [(ngModel)]="exampleOfUser"></textarea>
+                    <br />
+                    <input type="submit" class="btn btn-success" (click)="save()" value="Add word"/>
+                </div>
+                <div class="col-md-6">
+                    <div class="margin-50" [hidden]="translates.length < 1">
+                        <span class="label">Translates:</span>
+                        <div *ngFor="let translate of translates;" class="list-items">
+                            <div class="list-item cursor-pointer"
+                                 [class.choosen-list-item]="translate == chosenTranslate"
+                                 (click)="chooseTranslate(translate)">
+                                {{translate}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+
+
+
+    <!--<div class="visible-desktop">
         <div class="row add-word-area">
             <div class="col-md-6">
                 <span class="label">English word:</span>
                 <br />
 
                 <input class="form-control add-word-english-word" style="float: left" type="text" (keyup.enter)="translate()" [(ngModel)]="englishWord" />
-                <button class="btn btn-info glyphicon glyphicon-search" (click)="translate()"></button>
+                <button class="btn glyphicon glyphicon-search" (click)="translate()"></button>
                 <br />
                 <br />
                 <span class="label">Your translate:</span>
@@ -27,38 +67,33 @@
             <div class="col-md-6">
                 <div class="margin-50" [hidden]="translates.length < 1">
                     <span class="label">Translates:</span>
-                    <div class="list-items">
-                        <div *ngFor="let translate of translates;">
-                            <div class="list-item cursor-pointer"
-                                 [class.choosen-list-item]="translate == chosenTranslate"
-                                 (click)="chooseTranslate(translate)">
-                                {{translate}}
-                            </div>
+                    <div *ngFor="let translate of translates;" class="list-items">
+                        <div class="list-item cursor-pointer"
+                                [class.choosen-list-item]="translate == chosenTranslate"
+                                (click)="chooseTranslate(translate)">
+                            {{translate}}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- mobile -->
-    <div class="visible-phone visible-tablet">
+    <div class="visible-phone visible-tablet center-block">
         <span class="label">English word:</span>
         <br />
 
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button class="btn btn-secondary" (click)="translate()" type="button">
-							<span class="form-control add-word-english-word"></span>
-						</button>
-					</span>
-					<input type="text" class="form-control" (keyup.enter)="translate()" [(ngmodel)]="englishWord"/>
-				</div>
-
-        <!--<input class="form-control add-word-english-word" style="float: left" type="text" (keyup.enter)="translate()" [(ngModel)]="englishWord" />
-        <button class="btn btn-info glyphicon glyphicon-search" (click)="translate()"></button>
+        <div class="input-group">
+            <input type="text" class="form-control" (keyup.enter)="translate()" [(ngModel)]="englishWord"/>
+            <span class="input-group-btn">
+                <button class="btn btn-secondary" (click)="translate()" type="button">
+                    <span class="glyphicon glyphicon-search"></span>
+                </button>
+            </span>
+        </div>
         <br />
-        <br />-->
+        <br />
 
         <span class="label">Your translate:</span>
         <br />
@@ -68,13 +103,11 @@
 
         <div class="margin-50" [hidden]="translates.length < 1">
             <span class="label">Translates:</span>
-            <div class="list-items">
-                <div *ngFor="let translate of translates;">
-                    <div class="list-item cursor-pointer"
-                         [class.choosen-list-item]="translate == chosenTranslate"
-                         (click)="chooseTranslate(translate)">
-                        {{translate}}
-                    </div>
+            <div *ngFor="let translate of translates;" class="list-items">
+                <div class="list-item cursor-pointer"
+                        [class.choosen-list-item]="translate == chosenTranslate"
+                        (click)="chooseTranslate(translate)">
+                    {{translate}}
                 </div>
             </div>
         </div>
@@ -86,6 +119,8 @@
         <textarea class="form-control" [(ngModel)]="exampleOfUser"></textarea>
         <br />
 
-        <button class="btn btn-success" (click)="save()">Add word</button>
+        <div>
+            <button class="btn btn-success" (click)="save()">Add word</button>
+        </div>
     </div>
 </div>
