--- a/TewCloud/Scripts/AngularJS/app/templates/addWord.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/addWord.html
@@ -7,9 +7,9 @@
             <div class="row add-word-area">
                 <div class="col-md-6">
                     <span class="label form-group" [ngClass]="{'has-error':!addWordform.controls['english'].valid}">English word:</span>
-                    <div *ngIf="addWordform.controls['english'].hasError('required') && addWordform.controls['english'].touched" class="alert alert-danger">You must include a last name.</div>
-                    <div *ngIf="addWordform.controls['english'].hasError('minlength') && addWordform.controls['english'].touched" class="alert alert-danger">Min len.</div>
-                    <div *ngIf="addWordform.controls['english'].hasError('maxlength') && addWordform.controls['english'].touched" class="alert alert-danger">Max len.</div>
+                    <div *ngIf="addWordform.controls['english'].hasError('required') && addWordform.controls['english'].touched" class="has-error">You must include a last name.</div>
+                    <div *ngIf="addWordform.controls['english'].hasError('minlength') && addWordform.controls['english'].touched" class="has-error">Min len.</div>
+                    <div *ngIf="addWordform.controls['english'].hasError('maxlength') && addWordform.controls['english'].touched" class="has-error">Max len.</div>
 
                         <br />
                         <input [formControl]="addWordform.controls['english']" name="english" class="form-control add-word-english-word" type="text" (keyup.enter)="translate()" />
