fixed link on addWord page

--- a/TewCloud/Scripts/AngularJS/app/templates/addWord.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/addWord.html
@@ -13,7 +13,7 @@
 
                         <br />
                         <input [formControl]="addWordform.controls['english']" name="english" class="form-control add-word-english-word" type="text" (keyup.enter)="translate()" />
-                        <button class="btn glyphicon glyphicon-search" (click)="translate()"></button>
+                        <a class="btn glyphicon glyphicon-search" (click)="translate()"></a>
                         <br />
                         <br />
 
