added help button. design refactoring

--- a/TewCloud/Scripts/AngularJS/app/templates/app.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/app.html
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div [hidden]="!userName" class="body-margin-30">
+<div [hidden]="!userName" class="margin-20">
     <router-outlet></router-outlet>
 </div>
 
