--- a/TewCloud/Content/Learning.css
+++ b/TewCloud/Content/Learning.css
@@ -1,5 +1,9 @@
-﻿.body-margin-30 {
-    margin: 30px;
+﻿.margin-10 {
+    margin: 10px;
+}
+
+.margin-20 {
+    margin: 20px;
 }
 
 .center-form{
@@ -114,6 +118,10 @@
 .tests-test-word {
     font-size: 40px;
     font-weight: bold;
+}
+
+.tests-test-example {
+    font-size: 20px;
 }
 
 .page-title {
