--- a/TewCloud/Content/Learning.css
+++ b/TewCloud/Content/Learning.css
@@ -63,13 +63,23 @@
 }
 
 .menu-header {
-    padding: 17px;
+    padding-left: 20px;
+    position: fixed;
+    height: 100vh;
+
+    /* col-md-2 */
+    max-width: 16.3%;
 }
 
 .menu-tab {
+    display:block;
     padding: 20px;
     color: gray;
     font-size: 16px;
+}
+
+.menu-tabs {
+    text-align: right;
 }
 
 .menu-tab-active {
@@ -102,13 +112,12 @@
 }
 
 .menu-header-user-name {
-    text-align: right;
+    /*text-align: right;*/
     font-size: 16px;
 }
 
 .log-out-link {
     color: white;
-    margin-left: 15px;
 }
 
 .mobile-text {
@@ -142,4 +151,11 @@
 .error-field {
     color: red;
     font-size: 12px;
+}
+
+.header-server-message {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    word-wrap: break-word;
+    font-weight: bold;
 }
