create new domen: tew2

--- a/TewCloud/Views/Account/SignIn.cshtml
+++ b/TewCloud/Views/Account/SignIn.cshtml
@@ -48,3 +48,9 @@
 
     @Html.ActionLink("Sign up", "SignUp")
 </div>
+
+
+<!-- redirect to new domen -->
+@*<script type="text/javascript">
+    $(document).ready(function () { window.location.href = 'http://tew2.azurewebsites.net' });
+</script>*@
