--- a/TewCloud/Views/Tew/Learning.cshtml
+++ b/TewCloud/Views/Tew/Learning.cshtml
@@ -4,13 +4,6 @@
     Layout = "~/Views/Shared/_LearningLayout.cshtml";
 }
 
-<!-- ANGULAR JS 2
-<script src="~/Scripts/AngularJS/node_modules/core-js/client/shim.min.js"></script>
-<script src="~/Scripts/AngularJS/node_modules/zone.js/dist/zone.js"></script>
-<script src="~/Scripts/AngularJS/node_modules/reflect-metadata/temp/Reflect.js"></script>
-<script src="~/Scripts/AngularJS/node_modules/systemjs/dist/system.src.js"></script>
--->
-
 <!-- INIT SCRIPTS -->
 <script src="~/Scripts/AngularJS/systemjs.config.js"></script>
 <script>
@@ -26,7 +19,8 @@
     <my-app></my-app>
 </div>
 
-@*<div class="visible-desktop">
-</div>
-<div class="visible-phone visible-tablet">
-</div>*@
+<!-- redirect to new domen -->
+@*<script type="text/javascript">
+    $(document).ready(function () { window.location.href = 'http://tew2.azurewebsites.net' });
+</script>*@
+
